--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+asgiref==3.3.1
+beautifulsoup4==4.9.3
+bs4==0.0.1
 certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
+Django==3.1.5
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-six==1.15.0
+pytz==2020.5
+requests==2.25.1
+soupsieve==2.1
 SQLAlchemy==1.3.22
-urllib3==1.26.3
+sqlparse==0.4.1
+urllib3==1.26.2
 Werkzeug==1.0.1
